Ensure the active venue in the scrollodex is always visible.

--- a/admin/less/venue-manager.less
+++ b/admin/less/venue-manager.less
@@ -58,6 +58,7 @@
 	list-style: none;
 	margin: 0;
 	padding: 0;
+	position: relative;
 }
 
 .audiotheme-venues-list-item {
